environments/aio/eduhamuy-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eduhamuy-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: aio.eduhamuy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eduhamuy-web
                port:
                  number: 80
